<resources>
    <string name="app_name">Cycler</string>
    <string name="API_KEY">AIzaSyAsDNjjDZk7Z1Bj1xMMlJodaCk1T_luEk8</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_rentals">Rentals</string>
    <string name="search_input">Search your location</string>
    <string name="location">Location:</string>
    <string name="ratings">Ratings:</string>
    <string name="available_bicycles">Bicycles Available</string>
    <string name="rent_now">Rent Now</string>
    <string name="profile">My Profile</string>
    <string name="username">Your Username</string>
    <string name="email">Your Email</string>
    <string name="mobile">Your Mobile Number</string>
    <string name="update_profile_btn_txt">Update Profile</string>
    <string name="logout_btn_txt">Logout</string>
    <string name="my_rentals">My Rentals</string>
    <string name="ongoing_rentals">Ongoing Rentals</string>
    <string name="rental_history">Rental History</string>
    <string name="rented_count">Rented Bicycle Count:</string>
    <string name="rented_hours_count">Total Rental Time:</string>
    <string name="rented_payment">Total Payment:</string>
    <string name="end_n_pay">End Rental &amp; Pay Now</string>
    <string name="bicycles">Bicycles</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_account_title">Create New Account</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_phone">Enter your phone number</string>
    <string name="enter_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already a member?</string>
    <string name="signIn_title">Log In To Your Account</string>
    <string name="signIn_btn_txt">Sign In</string>
    <string name="new_user_create_new_account">New User? Create New Account</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="place_order">Place Order</string>
    <string name="pay_now">Pay Now</string>
    <string name="payment_details">Payment Details</string>
</resources>